2014-June-09 Chris Morley

	* src/ConditionsManager.cpp,src/ConditionsManager.h,src/System.cpp, src/System.h:
	Allow one version of System::calculate() to loop for each bath gas mentioned
	in any <conditions> block.
	
	* src/plugins/AnalyticalRepresentation.cpp, schemas/mesmerPlugins.xsd: extra 
	keyword to do the above for Chebyshev fitting.

2014-June-05 Chris Morley

	* src/MolecularComponents.cpp,src/MolecularComponents.h,
	src/plugins/HinderedRotorQM1D.cpp: add gStructure::exportToCML(). Extra
	parameters on various functions to pass in the PersistPtr where XML is written.
	Add ids to conformer molecules.

	* src/XMLPersist.h,src/Persistence.h,src/XMLPersist.cpp: add function to write
	an attribute containing a formatted number. Correct XLMWrite to write text
	when there is an empty element.

	* examples/Butyl_H_to_Butane/Butyl_H_to_Butane.xml: remove unused He to avoid
	error message.

	* schemas/mesmerPlugins.xsd: update

2014-June-01 Struan Robertson

	* MolecularComponents.cpp: Code added to suppress the in writing of the general
	inertia matrix. 
	* Miscellaneous changes relating to VC12.
	* Linux64 baseline updates.

2014-May-31 Struan Robertson

	* HinderedRotorQM1D.cpp, HinderedRotorUtils.cpp, MolecularComponents.cpp/.h:
	Added member datum to account for the phase difference between the configuration 
	coordinates and the potential in the input file. 

2014-May-25 Chris Morley

	* src/System.cpp,src/System.h:enable multiple conditions blocks 
	* src/ConditionsManager.cpp: me:bathgas not essential in a conditions block.
	* schemas/mesmer.xsd: updated

2014-May-18 Struan Robertson

	* MolecularComponents.cpp/.h: Refactoring of the internal rotation vector 
	method.

2014-May-18 Struan Robertson

	* HinderedRotorQM1D.cpp, HinderedRotorCM1D.cpp, MolecularComponents.cpp/.h, 
	MesmerMaths.cpp/.h: Altered to calculate the cosine Fourier coefficients of 
	the reciprocal internal moment of inertia and make them available to the 
	hindered rotor method.
